# olion

./: .gitignore  LIA_RAG_SETUP.md  README.md
backend/: .eslintrc.cjs  README.md  package-lock.json  package.json
backend/prisma/: schema.prisma  schema.prisma.bak  seed.js
backend/src/: app.js  prisma-test.js  prisma.js  routes.js  server.js
backend/src/config/: cloudinary.js  env.js  prisma.js
backend/src/middlewares/: auth.js  (+8 more)
documents/00-index/: CHANGELOG.md  DOCUMENT_MAP.md  README.md
documents/01-initiation/: 01-project-charter.md
documents/02-requirements/: 01-brd-business-requirement-document.md  02-srs-software-requirement-specification.md  03-feature-breakdown-mvp.md  04-nfr-detail.md  05-mapping-fr-module-endpoint.md  BRD-OLION-V2.0.docx  DRAFT-BRD-OLION-V2.0.docx  SAD-OLION-V1_0.docx  SRS-OLION-V1.0.docx  STD-OLION-V1_0.docx
documents/03-analysis-design/: 01-domain-model.md
frontend/: README.md  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js
frontend/components/: Avatar.js  CategoryCard.js  CategorySkeleton.js  DashboardRedirect.js  DiscussionCard.js  DiscussionLink.js  EmptyState.js  FilterPill.js  LeaderRow.js  LeaderSkeleton.js  ModeBadge.js  Nav.js  PodiumCard.js  RankBadge.js  SkeletonCard.js  SkeletonStats.js  SonarRedirect.js  StatPill.js  TrendingRow.js  TrendingSkeleton.js  discussion.js
frontend/context/: AuthContext.js  CallContext.js
frontend/hooks/: useDiscussion.js  useUnreadNotifications.js
frontend/lib/: api.js  auth.js  getDiscussionRoute.js  routes.js  timeAgo.js
frontend/pages/: _app.js  admin.js  categories.js  community-guidelines.js  create.js  dashboard.js  index.js  leaderboard.js  login.js  logout.js  moderator.js  notifications.js  privacy.js  register.js  report.js  search.js  terms.js  trending.js
frontend/public/: index.html
frontend/src/: socket.js
frontend/styles/: globals.css  globals.css.bak
model/LIA-olion/: 00_README.md  01_daftar_pustaka.md  02_Matriks_SOTA_dan_Sintesis.md  03_Proposal_Penelitian.md  04_Desain_Eksperimen.md
model/rag-academic-chat/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
model/rag-academic-chat/scripts/: manual_chat_test.py
model/rag-academic-chat/src/application/ports/: llm_client_port.py
model/rag-academic-chat/src/config/: settings.py
model/rag-academic-chat/src/core/: exceptions.py  logging_config.py
model/rag-academic-chat/src/domain/entities/: __init__.py  chat_message.py  llm_response.py
model/rag-academic-chat/src/infrastructure/llm/: huggingface_llm_client.py  llm_client_factory.py  mock_llm_client.py
model/rag-academic-chat/tests/: conftest.py  test_config.py  test_domain_entities.py  test_llm_client_factory.py  test_mock_llm_client.py
(+294 files in other folders)
