[tool.poetry]
name = "rag-academic-chat"
version = "0.1.0"
description = "AI Chat Akademik berbasis Retrieval-Augmented Generation (RAG) - Production Ready"
authors = ["Technical Lead <lead@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
transformers = { version = "^4.42.0", optional = true }
torch = { version = "^2.3.0", optional = true }
accelerate = { version = "^0.31.0", optional = true }

[tool.poetry.extras]
# Instalasi penuh dengan dependency ML berat: poetry install --extras llm
llm = ["transformers", "torch", "accelerate"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.5.0"
mypy = "^1.10.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Ruff: linter + formatter (menggantikan black, isort, flake8)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E, W  : pycodestyle (PEP8)
# F     : pyflakes (unused import, undefined name, dll)
# I     : isort (urutan import)
# UP    : pyupgrade (sintaks modern Python)
# B     : bugbear (bug umum & anti-pattern)
# C4    : comprehensions
# SIM   : simplify
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # panjang baris ditangani formatter, bukan linter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy: static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["tests/"]

# torch & transformers adalah dependency opsional (extra "llm") - tidak
# selalu terpasang di setiap environment (lihat lazy import pattern di
# HuggingFaceLLMClient). Kita abaikan missing stub untuk keduanya saja,
# bukan menonaktifkan strict mode secara global.
[[tool.mypy.overrides]]
module = ["torch.*", "transformers.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
